✨ 实现获取消息的一部分功能，以及websocket的部分功能，后续继续完善

--- a/config.yaml
+++ b/config.yaml
@@ -13,3 +13,11 @@ redis:
     port: 6379
     password: ""
     db: 0
+
+msgChannelType:
+  channelType : "gochannel"
+  kafkaHost: "kafka:9092"
+  kafkaTopic: "chat_room"
+
+staticPath:
+  filePath : "web/static/file/"
