--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,10 +45,11 @@ services:
     environment:
       - REACT_APP_API_URL=http://localhost:3000
     depends_on:
-      - mysql
-      - redis
-      - kafka
-    links:
-      - mysql
-      - redis
-      - kafka
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      kafka:
+        condition: service_started
+    volumes:
+      - ./config.yaml:/opt/gochat/config.yaml
